--- a/docs/package.json
+++ b/docs/package.json
@@ -6,12 +6,13 @@
     "build": "vuepress build src"
   },
   "devDependencies": {
-    "vuepress": "^1.5.3"
+    "vuepress": "^0.14.11"
   },
   "description": "Starter template for a VuePress project - including CI for GH Pages hosting",
   "author": "MichaelCurrin",
   "license": "MIT",
   "dependencies": {
+    "markdown-it-katex": "^2.0.3",
     "vue-template-compiler": "^2.7.14"
   }
 }
